修改项目名称

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>cubic bezier timing</title>
+        <title>cubic bezier timing function</title>
 
         <style>
             * {
@@ -12,7 +12,7 @@
                 width: 100px; height: 100px; margin: 50px;
             }
             .quadrate1 {
-                background: green; animation: trans 1s cubic-bezier(0.17, 0.61, 0, 0.93); animation-fill-mode: forwards;
+                background: green; animation: trans 1s cubic-bezier(0.86, 0.44, 0.14, 0.65); animation-fill-mode: forwards;
             }
 
             @keyframes trans {
@@ -28,7 +28,7 @@
         <div class="quadrate quadrate1"></div>
         <div class="quadrate quadrate2"></div>
 
-        <script src="./cubic-bezier-timing.js"></script>
+        <script src="./cubic-bezier-timing-function.js"></script>
         <script src="./index.js"></script>
     </body>
 </html>
