通过夹逼法求参变量t的近似解,成功

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </head>
 
 <body>
-  <div class="quadrate quadrate1"></div>
-  <div class="quadrate quadrate2"></div>
+  <div class="quadrate quadrate1">css</div>
+  <div class="quadrate quadrate2">custom function</div>
 
   <script src="./cubic-bezier-timing-function.js"></script>
   <script src="./index.js"></script>
