1、使用牛顿法求值。 2、优化测试代码，定位到之前测试例子中自定义动画明显错误的原因是测试代码中生成的点为字符串，导致后续生成的函数系数不准确，已修复该问题。

--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,7 @@
         transform: translate3d(0, 0, 0);
       }
       100% {
-        transform: translate3d(600px, 0, 0);
+        transform: translate3d(1000px, 0, 0);
       }
     }
 
@@ -40,6 +40,7 @@
   <div class="quadrate quadrate1">css</div>
   <div class="quadrate quadrate2">custom function</div>
 
+  <script src="./lib.js"></script>
   <script src="./index.js"></script>
 </body>
 
