--- a/test/index.html
+++ b/test/index.html
@@ -40,8 +40,8 @@
   <div class="quadrate quadrate1">css</div>
   <div class="quadrate quadrate2">custom function</div>
 
-  <script src="./lib.js"></script>
-  <script src="./index.js"></script>
+  <script src="./cbtf.js"></script>
+  <script src="./index.js""></script>
 </body>
 
 </html>
